[package]
name = "vlan"
version = "0.1.2"
edition = "2024"

authors = ["Menhera.org Developers"]
description = "Clean VLAN ID representation with transparent u16 support, an invalid VLAN Error type, and a value that represents a native VLAN."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/vlan-rs"
homepage = "https://github.com/metastable-void/vlan-rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }